feat: custom JRE